✅ test: add MarketControllerIntegrationTest (#45)
- Add MarketControllerIntegrationTest with WireMock
- Add MarketFixture for reusable test data
- Refactor existing tests to use MarketFixture